# AudioPlay

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/org/hyx/audioplay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/hyx/audioplay/: MainActivity.kt
app/src/main/java/org/hyx/audioplay/fragment/: Blank1Fragment.kt  Blank2Fragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_blank1.xml  fragment_blank2.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/hyx/audioplay/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_base/: build.gradle
lib_base/src/androidTest/java/org/hyx/lib_base/: ExampleInstrumentedTest.kt
lib_base/src/main/: AndroidManifest.xml
lib_base/src/main/java/org/hyx/lib_base/: ARouterTestActivity.kt  App.kt  BaseActivity.kt  FunShare.kt  MainActivity.kt  StatusBarUtil.java
lib_base/src/main/res/layout/: base_arouter_test.xml
lib_base/src/main/res/layout/spinner/layout/: base_spinner.xml
lib_base/src/main/res/values/: dimens.xml  strings.xml  styles.xml
lib_base/src/test/java/org/hyx/lib_base/: ExampleUnitTest.kt
lib_play/: build.gradle
lib_play/src/androidTest/java/org/hyx/lib_play/: ExampleInstrumentedTest.kt
lib_play/src/main/: AndroidManifest.xml
lib_play/src/main/assets/: send.txt
lib_play/src/main/cpp/: AudioConstants.h  CMakeLists.txt  jni_bridge.cpp  native-lib.cpp
lib_play/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  AudioOboeEngine.cpp  AudioOboeEngine.hpp  DataSource.h  FullDuplexPass.h  FullDuplexStream.cpp  FullDuplexStream.h  LiveEffectEngine.cpp  LiveEffectEngine.h  NDKExtractor.cpp  NDKExtractor.h  audioRecord.cpp  audioRecord.hpp  audioShare.hpp  audioTrack.hpp
lib_play/src/main/java/org/hyx/lib_play/: JniLib.java  MainActivity.kt
lib_play/src/main/java/org/hyx/lib_play/activity/: PlayBaseActivity.kt  PlayHomeActivity.kt  PlayMediaActivity.kt
lib_play/src/main/java/org/hyx/lib_play/lib/: AudioEngine.kt  AudioPlayEngine.kt  AudioRecordEngine.kt  JniLib.java
lib_play/src/main/java/org/hyx/lib_play/parameter/: AudioConfig.kt  OboeAudioManager.kt  SpinnerAdapterFactory.kt
lib_play/src/main/res/layout/: activity_play_home.xml  activity_play_media.xml
lib_play/src/main/res/values/: strings.xml
lib_play/src/test/java/org/hyx/lib_play/: ExampleUnitTest.kt
